# gobject-template

./: got.c  gotconfig.h.in  meson.build
templates/abstract/: {ns}{name}.c.got  {ns}{name}.h.got
templates/derivable/: {ns}{name}.c.got
templates/final/: {ns}{name}.c.got  {ns}{name}.h.got
tests/: meson.build  test_template_expansion.sh
